@@ -10,11 +10,11 @@ INSTALLATION_FILES=$(PS_FILES)
 
 # teTeX-3.0 compatibility.
 local-install:
-	-$(INSTALL) -d $(local_lilypond_datadir)/dvips
-	(cd $(local_lilypond_datadir)/dvips && ln -sf ../ps .)
+	-$(INSTALL) -d $(DESTDIR)$(local_lilypond_datadir)/dvips
+	(cd $(DESTDIR)$(local_lilypond_datadir)/dvips && ln -sf ../ps .)
 
 local-uninstall:
-	-rm -f $(local_lilypond_datadir)/dvips/ps
-	-rmdir $(local_lilypond_datadir)/dvips
+	-rm -f $(DESTDIR)$(local_lilypond_datadir)/dvips/ps
+	-rmdir $(DESTDIR)$(local_lilypond_datadir)/dvips
 
 include $(depth)/make/stepmake.make
