@@ -18,6 +18,6 @@ MAKEINFO = LANG= $(MAKEINFO_PROGRAM)  --enable-encoding
 INFO_INSTALL_FILES = $(wildcard $(addsuffix *, $(INFO_FILES)))
 INFO_INSTALL_COMMAND =$(if $(INFO_INSTALL_FILES),\
 	$(INSTALL) -d $(DESTDIR)$(package_infodir) ; \
-	$(MAKE) INSTALLATION_OUT_DIR=$(DESTDIR)$(package_infodir) \
+	$(MAKE) INSTALLATION_OUT_DIR=$(package_infodir) \
 		depth=$(depth) INSTALLATION_OUT_FILES="$(INFO_INSTALL_FILES)" \
 		-f $(stepdir)/install-out.sub.make,true)
